<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_margin="32dp"
    android:layout_gravity="center"
    app:cardCornerRadius="12dp"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title_filters"
            style="@style/TextStyle.Title.Large"
            android:text="@string/label_filter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title_sort_by"
            style="@style/TextStyle.Title.Small"
            android:text="@string/label_sort_by"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_filters" />

        <RadioGroup
            android:id="@+id/radio_group_sort_by"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_sort_by">

            <RadioButton
                android:id="@+id/by_headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_headline" />

            <RadioButton
                android:id="@+id/by_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_created_date" />
        </RadioGroup>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title_range"
            style="@style/TextStyle.Title.Small"
            android:text="@string/label_range"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radio_group_sort_by" />

        <RadioGroup
            android:id="@+id/radio_group_range_by"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_range">

            <RadioButton
                android:id="@+id/by_ascending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/label_ascending" />

            <RadioButton
                android:id="@+id/by_descending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_descending" />
        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_apply"
            android:layout_marginTop="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="APPLY"
            android:backgroundTint="@android:color/transparent"
            android:textColor="@color/md_theme_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radio_group_range_by" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CANCEL"
            android:backgroundTint="@android:color/transparent"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintEnd_toStartOf="@id/btn_apply"
            app:layout_constraintTop_toTopOf="@id/btn_apply"
            app:layout_constraintBottom_toBottomOf="@id/btn_apply"
             />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>